fixed image layout issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -236,11 +236,11 @@
 /* Full image display */
 
 #full_pic {
-	width: 80%;
+	width: 84%;
 	margin-left: auto;
 	margin-right: auto;
 	padding-top: 2%;
-	/*float: left;*/
+	float: left;
 	overflow: hidden;
 }
 
@@ -253,12 +253,25 @@
 #previous_img {
 	float: left;
 	margin-top: 25%;
+	width: 8%;
+}
+
+#previous_img a {
+	color: black;
+	text-decoration: none;
+
 }
 
 #next_img {
 	float: right;
 	margin-top: 25%;
+	width: 8%;
+}
 
+#next_img a {
+	color: black;
+	text-decoration: none;
+	float: right;
 }
 
 /* image upload form */
